style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-image: url('./images/bg-intro-desktop.png'),
    linear-gradient(hsl(0, 100%, 74%), hsl(0, 100%, 74%));
  background-size: cover;
  color: #fff;
  font-family: 'Poppins', sans-serif;
  line-height: 1.6;
}

p {
  font-size: 0.8rem;
}

main {
  padding: 5em 2em;
}

.intro {
  text-align: center;
  margin-bottom: 3em;
}

.intro__title {
  font-size: 1.6rem;
  line-height: 1.4;
  margin-bottom: 0.75em;
  font-weight: 600;
}

.signup__trial {
  text-align: center;
  background-color: hsl(248, 32%, 49%);
  border-radius: 10px;
  box-shadow: 0 7px 2px rgba(0, 0, 0, 0.3);
  padding: 1.125em 3em;
  margin-bottom: 2em;
}

.signup__trial > span {
  font-weight: 600;
}

.signup__form {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  padding: 1.25em;
  border-radius: 10px;
  box-shadow: 0 7px 2px rgba(0, 0, 0, 0.3);
}

.signup__control {
  margin-bottom: 1.125rem;
  padding-bottom: 1.25rem;
  position: relative;
}

.signup__input {
  padding: 0.85em 1.75em;
  border-radius: 5px;
  border: 1px solid hsl(246, 25%, 77%);
  font-family: inherit;
  font-weight: 600;
  color: hsl(249, 10%, 26%);
  width: 100%;
}

.signup__input::placeholder {
  color: hsl(249, 10%, 26%);
  font-family: inherit;
  font-weight: 600;
}

.signup__input--error {
  border: 1px solid hsl(0, 100%, 74%);
  position: relative;
  background-image: url(./images/icon-error.svg);
  background-repeat: no-repeat;
  background-position: 95%;
}

.error-msg {
  visibility: hidden;
  position: absolute;
  bottom: 0;
  left: 0;
  color: hsl(0, 100%, 74%);
  font-size: 0.75rem;
}

.signup__input.signup__input--error + .error-msg {
  visibility: visible;
}

.signup__btn {
  border-radius: 5px;
  border: 1px solid hsl(246, 25%, 77%);
  background-color: hsl(154, 59%, 51%);
  color: #fff;
  font-family: inherit;
  font-weight: 500;
  padding: 0.85em;
  text-transform: uppercase;
  letter-spacing: 1px;
  margin-bottom: 1.125em;
  box-shadow: 0 2px 2px hsla(154, 59%, 51%, 0.6);
  cursor: pointer;
}

.signup__terms {
  color: hsl(246, 25%, 77%);
  text-align: center;
  font-size: 0.55rem;
  padding: 0 1.75rem;
}

.signup__terms > span {
  color: hsl(0, 100%, 74%);
  font-weight: 600;
}

footer {
  text-align: center;
  padding: 1em 2em;
}

footer a {
  color: #fff;
  font-size: 1.05rem;
}

@media only screen and (min-width: 600px) {
  p {
    font-size: 1rem;
  }

  .intro__title {
    font-size: 1.8rem;
  }

  .signup__terms {
    font-size: 0.75rem;
  }
}

@media only screen and (min-width: 800px) {
  main {
    display: flex;
    padding: 7em 5em;
    justify-content: space-between;
    max-width: 1300px;
    margin-right: auto;
    margin-left: auto;
  }

  .intro {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    margin-bottom: 0;
    margin-right: 3em;
  }

  .intro__title {
    font-size: 2.25rem;
  }
}

@media only screen and (min-width: 1100px) {
  .intro {
    max-width: 550px;
  }

  .intro__title {
    font-size: 3rem;
  }

  .signup__form {
    padding: 2.5em;
  }

  .signup__input {
    padding: 1.25em 2em;
  }

  .error-msg {
    font-size: 0.85rem;
  }
}

